--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   <input type="text" id="myText2" value="">
         <button type="button" onclick="myFunction()">click it</button>
   <p id="demo"></p >
-    <h3>Function Definition;Calling A Function;Function Parameters</h3>>
+    <h3>Function Definition;Calling A Function;Function Parameters</h3>
 </body>
 </html>
